Almost complete problem 2

--- a/index.html
+++ b/index.html
@@ -364,6 +364,10 @@ div.tocify {
 <h2>Link to the page about me</h2>
 <p><a href="about.html">About me</a></p>
 </div>
+<div id="link-to-the-page-about-my-dashboard" class="section level2">
+<h2>Link to the page about my dashboard</h2>
+<p><a href="dashboard.html">Dashboard</a></p>
+</div>
 </div>
 
 
