--- a/index.html
+++ b/index.html
@@ -337,6 +337,9 @@ div.tocify {
      
   </a>
 </li>
+<li>
+  <a href="dashboard.html">Dashboard</a>
+</li>
       </ul>
     </div><!--/.nav-collapse -->
   </div><!--/.container -->
