--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 <script src="site_libs/header-attrs-2.10/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/cerulean.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/yeti.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -338,7 +338,16 @@ div.tocify {
   </a>
 </li>
 <li>
+  <a href="https://www.linkedin.com/in/shiwei-chen-gic942">
+    <span class="fa fa-linkedin fa-lg"></span>
+     
+  </a>
+</li>
+<li>
   <a href="dashboard.html">Dashboard</a>
+</li>
+<li>
+  <a href="plotly.html">Plotly</a>
 </li>
       </ul>
     </div><!--/.nav-collapse -->
@@ -356,12 +365,13 @@ div.tocify {
 
 <div id="this-page-has-more-information-about-me" class="section level1">
 <h1>This page has more information about me</h1>
-<p>I am taking my master program in the Columbia university-Mailman school of public health.</p>
+<p>I graduated from City university of New York-Hunter college, my major is Math.</p>
+<p>I am taking my master program of Biostatistics in the Columbia university-Mailman school of public health.</p>
 <div id="my-contact" class="section level2">
 <h2>My contact</h2>
 <p>E-mail address:</p>
-<p>*<a href="sc4935@cumc.columbia.edu">Academic</a></p>
-<p>*<a href="jcsw1216@gmail.com">Personal</a></p>
+<p>Academic: <a href="mailto:sc4935@cumc.columbia.edu" class="email">sc4935@cumc.columbia.edu</a></p>
+<p>Personal: <a href="mailto:jcsw1216@gmail.com" class="email">jcsw1216@gmail.com</a></p>
 </div>
 <div id="my-resume" class="section level2">
 <h2>My resume</h2>
